# aeon_exp_htsloom

./: .editorconfig  .gitignore  Deploy.cmd  Deploy.ps1  LICENSE  README.md  pyproject.toml
.bonsai/: Bonsai.config
.config/: dotnet-tools.json
calibration/: robocopy.py
docs/: ABCDStatePlayer.md  FeederTask.md  README.md  RigSetup.md  TaskSetup.md
docs/examples/: Escalation.yaml  README.md  RewardSwitch.yaml
src/: AEON-HtsLoom.bonsai  AEON-HtsLoom.cmd  AEON-LoomServer.bonsai  DeploySchemas.cmd  DeploySchemas.ps1  Extensions.csproj  Feeder.json  ForagingController.json  HtsLoom.json  HtsLoomRig.yaml  HtsLoomTask.yaml  LoomPlayer.bonsai  PolygonEast.yaml  PolygonNorth.yaml  PolygonSouth.yaml  PolygonWest.yaml  Rig.json  Rule1_AllActive.yaml  SystemStartup-AEON4.bonsai  SystemStartup-AEON4.cmd  lightcycle.config
src/Extensions/: AlertGate.bonsai  Alerts.bonsai  AngleCalculator.cs  CalibrateRegions.bonsai  Cameras.bonsai  Contains.cs  ControlPanel.bonsai  ConvertToObject.cs  ConvertToPoint2f.cs  CreateEventNameFromString.cs  CreateScreenNameFromString.cs  CsvFileWriter.cs  CsvWriterCombinator.cs  Devices.bonsai  DrawBlob.bonsai  EqualKeyCameraBlob.bonsai  EqualTuple2.bonsai  ExecuteLoom.bonsai  ExportMetadata.bonsai  ExportRigConfig.bonsai  Feeder.Generated.cs  FeedersTaskLogic.bonsai  FeedersTasklogic.bonsai  FindBlobsInZoneId .bonsai  FormatFileName.bonsai  FormatHarpIndexedHeadTail.cs  FormatHarpLoomRegionAngle.cs  FormatHarpLoomRegionState.cs  GetCurrentDir.cs  GetEnumKey.cs  GetGlobalTrigger.bonsai  GetMatchingObservableGroup.bonsai  HeadTailVelocity.cs  (+62 more)
(+7 files in other folders)
