[project]
name = "swc-aeon-rigs-HtsLoom"
version = "0.0.1"
requires-python = ">=3.11"
description = "A environment for interfacing with acquired data from project PhieldsExperiments."
readme = "README.md"
dependencies = [
  "dotmap",
  "harp-python>=0.3.0",
  "matplotlib",
  "numpy>=1.21.0, <2",
  "matplotlib~=3.7.1",
  "opencv-python~=4.7.0",
  "lxml~=4.9.2",
  "GitPython~=3.1.31",
  "pandas>=1.3",
  "swc-aeon-rigs",
  "swc-aeon>=0.1.0",
]

[tool.ruff]
line-length = 108

[tool.uv.sources]
swc-aeon-rigs = { git = "https://github.com/SainsburyWellcomeCentre/aeon_swc_rigs.git" }
